pindefinition for new board revision. Stepper driver microstepping in initialization. cleanup.

--- a/pickplazstm/pickplazstm.ioc
+++ b/pickplazstm/pickplazstm.ioc
@@ -44,58 +44,65 @@ Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
 Mcu.Pin17=PB0
-Mcu.Pin18=PE13
-Mcu.Pin19=PE14
+Mcu.Pin18=PB1
+Mcu.Pin19=PB2
 Mcu.Pin2=PE4
-Mcu.Pin20=PE15
-Mcu.Pin21=PB12
-Mcu.Pin22=PD8
-Mcu.Pin23=PD9
-Mcu.Pin24=PD10
-Mcu.Pin25=PD11
-Mcu.Pin26=PD12
-Mcu.Pin27=PD13
-Mcu.Pin28=PD14
-Mcu.Pin29=PD15
+Mcu.Pin20=PE10
+Mcu.Pin21=PE11
+Mcu.Pin22=PE12
+Mcu.Pin23=PE13
+Mcu.Pin24=PE14
+Mcu.Pin25=PE15
+Mcu.Pin26=PB12
+Mcu.Pin27=PB13
+Mcu.Pin28=PB14
+Mcu.Pin29=PD8
 Mcu.Pin3=PE5
-Mcu.Pin30=PC6
-Mcu.Pin31=PC7
-Mcu.Pin32=PC8
-Mcu.Pin33=PC9
-Mcu.Pin34=PA9
-Mcu.Pin35=PA10
-Mcu.Pin36=PA11
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PC11
+Mcu.Pin30=PD9
+Mcu.Pin31=PD10
+Mcu.Pin32=PD11
+Mcu.Pin33=PD12
+Mcu.Pin34=PD13
+Mcu.Pin35=PD14
+Mcu.Pin36=PD15
+Mcu.Pin37=PC6
+Mcu.Pin38=PC7
+Mcu.Pin39=PC8
 Mcu.Pin4=PE6
-Mcu.Pin40=PC12
-Mcu.Pin41=PD0
-Mcu.Pin42=PD1
-Mcu.Pin43=PD2
-Mcu.Pin44=PD3
-Mcu.Pin45=PD4
-Mcu.Pin46=PD5
-Mcu.Pin47=PD6
-Mcu.Pin48=PD7
-Mcu.Pin49=PB4
+Mcu.Pin40=PC9
+Mcu.Pin41=PA9
+Mcu.Pin42=PA10
+Mcu.Pin43=PA11
+Mcu.Pin44=PA13
+Mcu.Pin45=PA14
+Mcu.Pin46=PC11
+Mcu.Pin47=PC12
+Mcu.Pin48=PD0
+Mcu.Pin49=PD1
 Mcu.Pin5=PH0 - OSC_IN
-Mcu.Pin50=PB5
-Mcu.Pin51=PB6
-Mcu.Pin52=PB7
-Mcu.Pin53=PB8
-Mcu.Pin54=PB9
-Mcu.Pin55=PE0
-Mcu.Pin56=PE1
-Mcu.Pin57=VP_SYS_VS_Systick
-Mcu.Pin58=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin50=PD2
+Mcu.Pin51=PD3
+Mcu.Pin52=PD4
+Mcu.Pin53=PD5
+Mcu.Pin54=PD6
+Mcu.Pin55=PD7
+Mcu.Pin56=PB4
+Mcu.Pin57=PB5
+Mcu.Pin58=PB6
+Mcu.Pin59=PB7
 Mcu.Pin6=PH1 - OSC_OUT
-Mcu.Pin60=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin60=PB8
+Mcu.Pin61=PB9
+Mcu.Pin62=PE0
+Mcu.Pin63=PE1
+Mcu.Pin64=VP_SYS_VS_Systick
+Mcu.Pin65=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin66=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin67=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=61
+Mcu.PinsNb=68
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -145,8 +152,16 @@ PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB12.Locked=true
 PB12.Signal=GPIO_Input
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
@@ -211,6 +226,12 @@ PE0.Locked=true
 PE0.Signal=GPIO_Output
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE12.Locked=true
+PE12.Signal=GPIO_Output
 PE13.Locked=true
 PE13.Signal=GPIO_Input
 PE14.Locked=true
