control pulse fsm

--- a/pickplazfeederstm/pickplazfeederstm.ioc
+++ b/pickplazfeederstm/pickplazfeederstm.ioc
@@ -14,24 +14,25 @@ Mcu.Name=STM32F030C8Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA3
 Mcu.Pin1=PA4
-Mcu.Pin10=PA11
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA5
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
 Mcu.Pin5=PB2
 Mcu.Pin6=PB10
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=19
+Mcu.Pin7=PB11
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -88,6 +89,10 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=SW_BACKWARD
 PB10.Locked=true
 PB10.Signal=GPIO_Input
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=LED4
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=SW_FORWARD
 PB2.Locked=true
