defined feeder gpio outputs

--- a/pickplazstm/pickplazstm.ioc
+++ b/pickplazstm/pickplazstm.ioc
@@ -131,7 +131,7 @@ RCC.APB1TimFreq_Value=100000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PC4.Locked=true
 Dma.USART1_RX.0.Mode=DMA_CIRCULAR
-PC5.Signal=GPIO_Input
+PC5.Signal=GPIO_Output
 PE6.Locked=true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PD6.Signal=GPIO_Output
@@ -164,7 +164,7 @@ PC11.Signal=GPIO_Output
 PD3.Signal=GPIO_Output
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
 PC8.Signal=GPIO_Output
-PC4.Signal=GPIO_Input
+PC4.Signal=GPIO_Output
 PC6.Signal=GPIO_Output
 PD7.Signal=GPIO_Output
 PD1.Signal=GPIO_Output
@@ -294,7 +294,7 @@ Mcu.IP7=TIM2
 ProjectManager.CoupleFile=false
 PB4.Locked=true
 RCC.48MHZClocksFreq_Value=50000000
-PA4.Signal=GPIO_Input
+PA4.Signal=GPIO_Output
 RCC.SYSCLKFreq_VALUE=100000000
 Mcu.Pin22=PE12
 PB5.Signal=GPIO_Output
@@ -345,7 +345,7 @@ NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PD9.Locked=true
 RCC.APB1Freq_Value=50000000
 PD1.Locked=true
-PB0.Signal=GPIO_Input
+PB0.Signal=GPIO_Output
 ProjectManager.DeviceId=STM32F411VETx
 PB12.Signal=GPIO_Input
 ProjectManager.LibraryCopy=1
